kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: india-map-service
  namespace: default
spec:
  selector:
    app: india-map
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
